# context-hub

./: .gitignore  README.md  pyproject.toml  python-migration-plan.md
.github/workflows/: deploy-content.yml
cli/test/: e2e.test.js
content/amplitude/docs/analytics/javascript/: DOC.md
content/assemblyai/docs/transcription/: DOC.md
content/cockroachdb/docs/distributed-db/: DOC.md
content/postmark/docs/transactional-email/: DOC.md
pytests/: test_annotations.py  test_bm25.py  test_cache_utils.py  test_cli_wiring.py  test_config.py  test_feedback_command.py  test_frontmatter_normalize.py  test_get_command_helpers.py  test_identity_detect.py  test_registry_resolve.py  test_registry_search.py  test_telemetry.py  test_telemetry_send.py
src/pychub/: __init__.py  cli.py
src/pychub/commands/: __init__.py  annotate.py  cache.py  feedback.py  get.py  search.py  update.py
src/pychub/lib/: __init__.py  annotations.py  bm25.py  cache.py  config.py  frontmatter.py  identity.py  normalize.py  output.py  registry.py  telemetry.py
src/pychub/mcp/: __init__.py  server.py
src/pychub/runtime/: __init__.py  monty_runtime.py
